[gd_scene load_steps=4 format=2]

[ext_resource path="res://resources/sprites/player_ship.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://scenes/PlayerBullet.tscn" type="PackedScene" id=3]




[node name="Player" type="Area2D"]
script = ExtResource( 2 )
Projectile = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2( 0.5, 0.5 )
polygon = PoolVector2Array( 2.07373, -64.7958, -53.0806, 71.6758, 74.9057, 69.5545 )

[node name="BulletCooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="BulletSpawn" type="Position2D" parent="."]
position = Vector2( 1.41422, -32.1734 )
[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
